# taskpilot-assessment

./: .dockerignore  .env.example  .gitignore  CODE_REVIEW.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  task_service_fixed.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_idempotency_key.py
app/: auth.py  config.py  database.py  errors.py  logging_config.py  main.py  metrics.py  middleware.py  models.py  schemas.py  service.py  state_machine.py
app/routers/: health.py  tasks.py
app/worker/: executor.py  processing.py  runner.py  worker.py
frontend/: .dockerignore  .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/app/: layout.tsx
frontend/app/api/tasks/: route.ts
frontend/app/api/tasks/[id]/: route.ts
frontend/components/: CreateTaskForm.tsx  Dashboard.tsx  StatusBadge.tsx  TaskList.tsx
frontend/lib/: api.ts  types.ts
tests/: conftest.py  test_api.py  test_config.py  test_transitions.py  test_worker.py
